--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html><html lang="pt-BR" class="no-js" itemtype="https://schema.org/WebPage" itemscope=""><head>
+	<meta name="facebook-domain-verification" content="roz03vefm8b4fleofa7g2pbb6qzkay" />
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
 	<title>Edson  activecontingencia.com</title>
